--- a/projeto-final/package.json
+++ b/projeto-final/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testcontainers/mongodb": "^10.6.0",
     "@types/jest": "^29.4.0",
-    "jest": "^29.4.3"
+    "jest": "^29.7.0",
+    "mongoose": "^8.1.1",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.2",
-    "node-mocks-http": "^1.14.1",
-    "supertest": "^6.3.3"
+    "node-mocks-http": "^1.14.1"
   }
 }
